--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "lint:lint-staged": "lint-staged",
     "preinstall": "npx only-allow pnpm",
     "prepare": "husky",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "start": "node --trace-warnings --max-http-header-size=65536 --max-old-space-size=8192 ./bin/www",
+    "test": "jest --watchAll"
   },
   "config": {
     "commitizen": {
@@ -55,6 +57,8 @@
     "path-to-regexp": "^6.2.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
+    "vue-cookie": "^1.1.4",
+    "vue-cookies": "^1.8.4",
     "vue-i18n": "9.9.1",
     "vue-router": "^4.3.3"
   },
